# SolidCord

./: .eslintrc  .gitignore  LICENSE  README.md  bun.lockb  eslint.config.js  index.html  neutralino.config.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  uno.config.ts  vite.config.ts  windi.config.ts
.github/: CODE_OF_CONDUCT.md
.github/workflows/: beta-artifact.yml  beta.yml  build.yml  release.yml  stable.yml
scripts/: on-version-bump.js
src/: index.tsx
src-tauri/: .gitignore  Cargo.toml  Cross.toml  tauri.beta.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: index.ts
src/api/auth/: index.ts  login.ts  mfa.ts  register.ts  types.ts
src/api/channels/: messages.ts
src/api/users/: index.ts  me.ts  types.ts
src/api/users/me/: relationships.ts
src/assets/css/: satoshi.css
src/components/atoms/: avatar.tsx
src/components/auth/: account-selector.tsx  login.tsx
src/components/native/: window-dragger.tsx  window-titlebar.tsx
src/components/panels/user-widget/: index.tsx
src/components/private-dm/: entry.tsx
src/locales/: index.ts
src/pages/: [id].tsx  index.tsx  login.tsx
src/pages/[id]/: [...404].tsx  [guild_id].tsx  index.tsx
src/pages/[id]/[guild_id]/: [channel_id].tsx  friends.tsx  index.tsx
src/router/: index.tsx
src/stores/: accounts.ts  app.ts  cache.ts  caching.ts  user.ts
src/types/cache/: index.ts
src/types/discord/: channel.ts  guild.ts  message.ts  user.ts
src/utils/api/: channels.ts  client-properties.ts  images.ts
src/utils/native/: appdata.ts  fetch.ts  index.ts  notify.ts  request.ts
src/utils/storage/: accounts.ts  caching.ts
src/views/: account-layout.tsx  auth.tsx  channel.tsx  friends.tsx  guild-layout.tsx  guild-welcome.tsx  guild.tsx  private-dm-layout.tsx  welcome.tsx
src/websockets/: gateway.ts
src/websockets/gateway/: index.ts  types.ts
src/websockets/gateway/handlers/: dispatch.ts
