[package]
name = "solidcord"
version = "0.0.0"
description = "A Tauri+SolidJS client for Discord that was made with performance in mind while keeping the look of Discord."
authors = ["Mikkel RINGAUD <mikkel@milescode.dev>"]
license = "MIT"
repository = "https://github.com/Vexcited/SolidCord"
edition = "2021"
rust-version = "1.64"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog", "http-all", "notification-all", "shell-open", "system-tray", "window-close", "window-hide", "window-maximize", "window-minimize", "window-request-user-attention", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tokio-stream = "*"
futures = "*"
futures-channel = "0.3.28"
futures-util = "0.3.28"
tokio-util = "0.7.8"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
