[package]
name = "solidcord"
version = "0.0.0"
description = "A fast and open-source web client for Discord that is made with performance in mind."
authors = ["Mikkel RINGAUD <mikkel@milescode.dev>"]
license = "MIT"
repository = "https://github.com/Vexcited/SolidCord"
edition = "2021"
rust-version = "1.69"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "dialog", "http-all", "notification-all", "shell-open", "system-tray", "window-close", "window-hide", "window-maximize", "window-minimize", "window-request-user-attention", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
