[package]
name = "solidcord"
version = "0.1.0"
description = "A fast and open-source client for Discord that is made with performance in mind."
authors = ["Mikkel ALMONTE--RINGAUD <vexitofficial@gmail.com>"]
license = "MIT"
repository = "https://github.com/Vexcited/SolidCord"
edition = "2021"

[lib]
name = "solidcord_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-websocket = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
tauri-plugin-notification = "2"

